--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,13 @@
   <title>Hospital CMS Frontend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" sizes="192x192" href="./assets/img/side-logo.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/side-logo.png" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
